Added html file

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
       </div>
 
       <div class="footer-about">
-        <ul class="footer-about__list">
+        <ul class="footer-about__lists">
           <li><h3>Get To Know Us</h3></li>
           <li><a href="#" class="footer-about__item">About Us</a></li>
           <li><a href="#" class="footer-about__item">Careers</a></li>
